--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Harit Himanshu",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^5.0.2",
+    "style-loader": "^2.0.0",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0"
   },
