--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Harit Himanshu",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
+    "html-webpack-plugin": "^5.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0"
