--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --config webpack.dev.config.js",
+    "start": "webpack serve --open --config webpack.dev.config.js ",
     "build": "webpack"
   },
   "repository": {
@@ -20,7 +22,8 @@
     "html-webpack-plugin": "^5.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.22.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "lodash": "^4.17.20"
