--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "Harit Himanshu",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.168",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.1.0",
@@ -30,6 +31,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "lodash": "^4.17.20"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
