--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Be sure to read **all** of this document carefully, and follow the guidelines within.",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jest.config.ts",
+    "test:watch": "jest --watch --config jest.config.ts",
     "dev": "webpack --config webpack.dev.config.js",
     "start": "webpack serve --open --config webpack.dev.js ",
     "build": "webpack --config webpack.prod.js"
@@ -17,13 +18,20 @@
   "author": "Harit Himanshu",
   "license": "ISC",
   "devDependencies": {
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^26.0.20",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "html-webpack-plugin": "^5.1.0",
+    "jest": "^26.6.3",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.17",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.5",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
