--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   }
 }
