--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: TypeScript React CI
 on: [push]
 jobs:
   install-and-test:
+    runs-on: ubuntu-latest
     steps:
       - run: npm install
       - run: npm test
