Trying checkout action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,5 +4,6 @@ jobs:
   install-and-test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: npm install
       - run: npm test
