--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "author": "Harit Himanshu",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-typescript": "^7.12.16",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "babel-jest": "^26.6.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "enzyme": "^3.11.0",
