--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Be sure to read **all** of this document carefully, and follow the guidelines within.",
   "private": true,
   "scripts": {
-    "test": "jest --config jest.config.ts",
-    "test:watch": "jest --watch --config jest.config.ts",
+    "test": "jest --config",
+    "test:watch": "jest --watchAll",
     "dev": "webpack --config webpack.dev.config.js",
     "start": "webpack serve --open --config webpack.dev.js ",
     "build": "webpack --config webpack.prod.js"
@@ -21,6 +21,7 @@
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-typescript": "^7.12.16",
+    "@testing-library/react": "^11.2.5",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.20",
@@ -29,8 +30,6 @@
     "babel-jest": "^26.6.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "html-webpack-plugin": "^5.1.0",
     "jest": "^26.6.3",
     "style-loader": "^2.0.0",
