--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:watch": "jest --watchAll --config jest.config.ts",
     "dev": "webpack --config webpack.dev.config.js",
     "start": "webpack serve --open --config webpack.dev.js ",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "format": "npx prettier --write",
+    "postinstall": "husky install"
   },
   "repository": {
     "type": "git",
@@ -32,7 +34,9 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.1.0",
+    "husky": "^5.0.9",
     "jest": "^26.6.3",
+    "prettier": "2.2.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
