--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,5 @@
 {
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "arrowParens": "avoid",
-  "parser": "babel-ts"
+  "arrowParens": "avoid"
 }
