--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "webpack --config webpack.dev.config.js",
     "start": "webpack serve --open --config webpack.dev.js ",
     "build": "webpack --config webpack.prod.js",
+    "lint": "eslint -c .eslintrc.js --ext .ts src",
     "format": "prettier --write .",
     "postinstall": "husky install"
   },
@@ -30,9 +31,12 @@
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-jest": "^26.6.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
+    "eslint": "^7.20.0",
     "html-webpack-plugin": "^5.1.0",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
