--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend-test",
+  "name": "create-react-ts-starter",
   "version": "1.0.0",
-  "description": "Be sure to read **all** of this document carefully, and follow the guidelines within.",
+  "description": "A React Starter from scratch using TypeScript, Webpack, Jest, React Testing Library, Storybook, Perttier, ESLint, and GitHub Actions.",
   "private": true,
   "scripts": {
     "test": "jest --config jest.config.ts",
@@ -17,11 +17,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com-p:hhimanshu/frontend-test.git"
+    "url": " https://github.com/hhimanshu/create-react-ts-starter"
   },
   "keywords": [],
   "author": "Harit Himanshu",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.17",
