--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --config jest.config.ts",
     "test:watch": "jest --watchAll --config jest.config.ts",
-    "start": "webpack serve --open --config webpack.dev.js ",
+    "start": "webpack serve --config webpack.dev.js ",
     "start-prod": "rm -rf dist && yarn build && npx -y serve dist",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint -c .eslintrc.js --ext .ts src",
@@ -50,6 +50,7 @@
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "prettier": "2.2.1",
+    "react-dev-utils": "^11.0.4",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
