feat(DEV-22): add setup script to set up project
- override test coverage using npm script

--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "private": true,
   "scripts": {
     "test": "jest --config jest.config.ts",
-    "test:watch": "jest --watchAll --config jest.config.ts",
+    "test:watch": "jest --watchAll --config jest.config.ts --collectCoverage=false",
     "start": "webpack serve --config webpack.dev.js ",
     "start-prod": "rm -rf dist && yarn build && npx -y serve dist",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint -c .eslintrc.js --ext .ts src",
     "format": "prettier --write .",
-    "postinstall": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "start-prod-storybook": "yarn build-storybook && npx -y serve storybook-static -l 5858"
