--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-react-ts-starter",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "A React Starter from scratch using TypeScript, Webpack, Jest, React Testing Library, Storybook, Prettier, ESLint, and GitHub Actions.",
   "private": true,
   "scripts": {
@@ -13,11 +13,12 @@
     "format": "prettier --write .",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "start-prod-storybook": "yarn build-storybook && npx -y serve storybook-static -l 5858"
+    "start-prod-storybook": "yarn build-storybook && npx -y serve storybook-static -l 5858",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": " https://github.com/hhimanshu/create-react-ts-starter"
+    "url": "https://github.com/hhimanshu/create-react-ts-starter"
   },
   "keywords": [],
   "author": "Harit Himanshu",
@@ -57,10 +58,24 @@
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "semantic-release": "^17.4.4"
   },
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
-  }
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "plugins": [
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ]
+  ]
 }
