feat(DEV-22): fix branch name to trigger a release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release Create React TypeScript Starter
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   release:
     name: Release
