--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jest": "26.0.23",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.28.1",
     "@typescript-eslint/parser": "4.28.1",
     "babel-jest": "26.6.3",
@@ -51,6 +52,7 @@
     "jest": "26.6.3",
     "prettier": "2.2.1",
     "react-dev-utils": "11.0.4",
+    "semantic-release": "17.4.4",
     "style-loader": "2.0.0",
     "ts-loader": "8.3.0",
     "ts-node": "9.1.1",
@@ -58,12 +60,12 @@
     "webpack": "5.41.1",
     "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.8.0",
-    "semantic-release": "17.4.4"
+    "webpack-merge": "5.8.0"
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "release": {
     "branches": [
