--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-github-btn": "^1.2.0",
     "react-router-dom": "^5.2.0"
   },
   "release": {
