--- a/package.json
+++ b/package.json
@@ -57,12 +57,14 @@
     "ts-loader": "9.2.3",
     "ts-node": "10.0.0",
     "typescript": "4.3.5",
+    "url-loader": "^4.1.1",
     "webpack": "5.42.1",
     "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.8.0"
   },
   "dependencies": {
+    "@fontsource/poppins": "^4.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-github-btn": "^1.2.0",
