--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@storybook/addon-essentials": "6.3.2",
     "@storybook/addon-links": "6.3.2",
     "@storybook/react": "6.3.2",
+    "@svgr/webpack": "^5.5.0",
     "@testing-library/react": "12.0.0",
     "@types/enzyme": "3.10.8",
     "@types/enzyme-adapter-react-16": "1.0.6",
